- More logging during en-/decryption - More tests for logging during en-/decryption